// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query metricFindQuery should replace variables with values 1`] = `
[
  {
    "text": "product 1 (123)",
    "value": "123",
  },
  {
    "text": "product 2 (456)",
    "value": "456",
  },
]
`;

exports[`query metricFindQuery should return partNumber when queryBy is provided 1`] = `
[
  {
    "text": "product 1 (123)",
    "value": "123",
  },
  {
    "text": "product 2 (456)",
    "value": "456",
  },
]
`;

exports[`query metricFindQuery should return partNumber with family Name when queryBy is not provided 1`] = `
[
  {
    "text": "product 1 (123)",
    "value": "123",
  },
  {
    "text": "product 2 (456)",
    "value": "456",
  },
]
`;

exports[`query returns column headers with no data when Query Products returns no data 1`] = `
[
  {
    "fields": [
      {
        "name": "Part number",
        "type": "string",
        "values": [],
      },
      {
        "name": "Family",
        "type": "string",
        "values": [],
      },
      {
        "name": "Product name",
        "type": "string",
        "values": [],
      },
      {
        "name": "Workspace",
        "type": "string",
        "values": [],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`query returns data when there are valid queries 1`] = `
[
  {
    "fields": [
      {
        "name": "Part number",
        "type": "string",
        "values": [
          "123",
        ],
      },
      {
        "name": "Family",
        "type": "string",
        "values": [
          "Family 1",
        ],
      },
      {
        "name": "Product name",
        "type": "string",
        "values": [
          "Product 1",
        ],
      },
      {
        "name": "Workspace",
        "type": "string",
        "values": [
          "Workspace 1",
        ],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`query returns empty data for invalid properties query 1`] = `
[
  {
    "fields": [],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`query returns empty data for invalid take query 1`] = `
[
  {
    "fields": [],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`queryProductValues returns data when there are valid queries 1`] = `
[
  "value1",
]
`;

exports[`queryProducts returns data when there are valid queries 1`] = `
{
  "continuationToken": "",
  "products": [
    {
      "family": "Family 1",
      "id": "1",
      "name": "Product 1",
      "partNumber": "123",
      "properties": {
        "prop1": "value1",
      },
      "updatedAt": "2021-08-01T00:00:00Z",
      "workspace": "Workspace 1",
    },
  ],
  "totalCount": 2,
}
`;

exports[`queryProducts$ returns data when there are valid queries 1`] = `
{
  "continuationToken": "",
  "products": [
    {
      "family": "Family 1",
      "id": "1",
      "name": "Product 1",
      "partNumber": "123",
      "properties": {
        "prop1": "value1",
      },
      "updatedAt": "2021-08-01T00:00:00Z",
      "workspace": "Workspace 1",
    },
  ],
  "totalCount": 2,
}
`;
